[gd_scene load_steps=2 format=3 uid="uid://cajxw0erpgxce"]

[ext_resource type="Script" uid="uid://bw810csp50bph" path="res://addons/Godot_logger/logger_pannel.gd" id="1_lfl84"]

[node name="Logger" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(0, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfl84")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TraceLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/TraceLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/TraceLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b] Trace log"
fit_content = true

[node name="InfoLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/InfoLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/InfoLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b] Info log"
fit_content = true

[node name="DebugLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/DebugLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/DebugLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b][color=#3178C7] Debug log"
fit_content = true

[node name="WarnLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/WarnLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/WarnLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b][color=#FCDD52] Warning log"
fit_content = true

[node name="ErrorLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/ErrorLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/ErrorLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b][color=#F5693D] Error log"
fit_content = true

[node name="FatalLog" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/FatalLog"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/FatalLog"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b][color=#CB3D3D] Fatal log"
fit_content = true

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/TraceLog/CheckBox" to="." method="_on_trace_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/InfoLog/CheckBox" to="." method="_on_info_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/DebugLog/CheckBox" to="." method="_on_debug_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/WarnLog/CheckBox" to="." method="_on_warn_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/ErrorLog/CheckBox" to="." method="_on_error_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/VBoxContainer/FatalLog/CheckBox" to="." method="_on_fatal_check_box_toggled"]
